--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Project Ideas</title>
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}"/>
 </head>
 <body>
-<h1 th:text="'Welcome!'"></h1>
+<div class="container">
+    <div class="jumbotron">Welcome!</div>
+</div>
 </body>
 </html>
