--- a/src/main/resources/templates/addidea.html
+++ b/src/main/resources/templates/addidea.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Idea</title>
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
 </head>
 <body>
 <h1>Add Idea</h1>
