Added sign up functionality with custom implementation of UserDetailService

--- a/src/main/resources/templates/editidea.html
+++ b/src/main/resources/templates/editidea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Idea</title>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 <body>
 <h1>Edit Idea</h1>
