--- a/src/main/resources/templates/idealist.html
+++ b/src/main/resources/templates/idealist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Project Ideas</title>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 <body>
 <h1>Idea list</h1>
