--- a/src/main/resources/templates/idealist.html
+++ b/src/main/resources/templates/idealist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
     <title>Project Idea | Ideas</title>
@@ -39,8 +40,14 @@
             <td th:text="${idea.name}"></td>
             <td th:text="${idea.description}"></td>
             <td th:text="${idea.difficulty}"></td>
-            <td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${idea.id})}">Delete</a></td>
-            <td><a class="btn btn-primary" th:href="@{/edit/{id}(id=${idea.id})}">Edit</a></td>
+            <td>
+                <a sec:authorize="hasAuthority('ADMIN')" class="btn btn-danger"
+                   th:href="@{/delete/{id}(id=${idea.id})}">Delete</a>
+            </td>
+            <td>
+                <a sec:authorize="hasAuthority('ADMIN')" class="btn btn-primary"
+                   th:href="@{/edit/{id}(id=${idea.id})}">Edit</a>
+            </td>
         </tr>
         </tbody>
     </table>
