--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -35,6 +35,7 @@ form {
     left: 87.5%;
     bottom: 2em;
     display: inline-block;
+    margin-left: 2%;
 }
 
 #tb {
@@ -59,8 +60,7 @@ form {
 .divbtn {
     margin-top: 3%;
 }
-
 .alerts {
     position: relative;
-    left: 2%;
+    left: 3%;
 }
