--- a/src/main/resources/templates/myideas.html
+++ b/src/main/resources/templates/myideas.html
@@ -18,16 +18,25 @@
 <section class="container">
     <div>
         <img id="avatar" th:src="@{/img/avatar.png}" src="#" alt="Avatar"/>
+
+        <!--Displays the current user-->
         <h4 class="ind">[[${#httpServletRequest.remoteUser}]]</h4>
-        <h4 sec:authorize="hasAuthority('USER')"><a class="btn btn-outline-success ind" th:href="@{/idealist}">Back</a></h4>
+
+        <!--Only USER has the authority to use and see the "My ideas" button-->
+        <h4 sec:authorize="hasAuthority('USER')"><a class="btn btn-outline-success ind" th:href="@{/idealist}">Back</a>
+        </h4>
+
+        <!--The following is the logout button-->
         <form th:action="@{/logout}" method="post">
             <input class="btn btn-outline-danger ind" type="submit" value="Sign Out"/>
         </form>
     </div>
+    <!--Button that redirects to add idea page-->
     <h4><a class="btn btn-outline-primary" th:href="@{/addidea}">Add Idea</a></h4>
 </section>
 
 <section class="container" id="tb">
+    <!--table of ideas added by the current user-->
     <table class="table">
         <thead class="thead-light">
         <tr>
