--- a/src/main/resources/templates/myideas.html
+++ b/src/main/resources/templates/myideas.html
@@ -13,6 +13,8 @@
     <div class="jumbotron">
         <h1 class="text-center">My Ideas</h1>
     </div>
+    <!--Deletes the current authenticated user-->
+    <h4 id="dacc"><a class="btn btn-danger" th:href="@{/deleteaccount}">Delete Account</a></h4>
 </header>
 
 <section class="container">
@@ -64,6 +66,5 @@
         </tbody>
     </table>
 </section>
-
 </body>
 </html>
